--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ words_per_minute         : 150
 comments:
   provider               : "discus" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : "ddiiwoong" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : "ddii" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
