--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,18 @@ defaults:
       comments: true
       share: true
       related: true
+  # _certification
+  - scope:
+      path: ""
+      type: certification
+    values:
+      layout: single
+      author_profile: false
+      comments: true
+      share: true  
+
+# Collection
+collections:
+  certification:
+    output: true
+    permalink: /:collection/:path/
