--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,28 @@ defaults:
       comments: true
       share: true
       related: true
+  # _study
+  - scope:
+      path: ""
+      type: study
+    values:
+      layout: posts
+      author_profile: true
+      comments: true
+      share: true
+      related: true
+  # _ads
+  - scope:
+      path: ""
+      type: ads
+    values:
+      layout: posts
+      author_profile: true
+      comments: true
+      share: true
+      related: true
+
+collections:
+  study:
+    output: true
+    permalink: /:collection/:path/
