--- a/_config.yml
+++ b/_config.yml
@@ -309,7 +309,7 @@ defaults:
       type: ads
     values:
       layout: posts
-      author_profile: true
+      author_profile: false
       comments: true
       share: true
       related: true
