--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,6 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:ddiiwoong@email.com
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://ddii.kr"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/ddiiwoong"
@@ -143,8 +140,8 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ddiiwoong"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
+    - label: "Support Me"
+      icon: "https://ko-fi.com/X8X1W6OZ"
       # url:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
