--- a/_config.yml
+++ b/_config.yml
@@ -141,8 +141,8 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ddiiwoong"
     - label: "Support Me"
-      icon: "https://ko-fi.com/X8X1W6OZ"
-      # url:
+      icon: "fas fa-fw fa-coffee"
+      url: "https://ko-fi.com/X8X1W6OZ"
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
